# seralang

./: .gitignore  CMakeLists.txt  LICENSE
src/: syntax.bnf
src/serac/: CMakeLists.txt  main.cpp
src/serac/compiler/: compile_options.h  compiler.cpp  compiler.h  emit_type.h
src/serac/emitter/: emitter.cpp  emitter.exprs.cpp  emitter.funcs.cpp  emitter.globals.cpp  emitter.h  emitter.stmts.cpp
src/serac/emitter/ir/: func_decl_ir.h  package_ir.h  variable_ir.h
src/serac/emitter/ir/exprs/: argument_expr_ir.h  arithmetic_expr_ir.h  assignment_expr_ir.h  binary_expr_ir.h  bitwise_expr_ir.h  boolean_expr_ir.h  call_expr_ir.h  cast_expr_ir.h  downcast_expr_ir.h  expr_ir.h  identifier_expr_ir.h  integer_expr_ir.h  logical_expr_ir.h  postfix_expr_ir.h  prefix_expr_ir.h  relational_expr_ir.h  unary_expr_ir.h  upcast_expr_ir.h
src/serac/emitter/ir/stmts/: assignment_stmt_ir.h  break_stmt_ir.h  breakall_stmt_ir.h  call_stmt_ir.h  continue_stmt_ir.h  do_while_stmt_ir.h  else_if_stmt_ir.h  else_stmt_ir.h  expr_stmt_ir.h  if_stmt_ir.h  let_stmt_ir.h  loop_stmt_ir.h  return_stmt_ir.h  scope_stmt_ir.h  stmt_ir.h  whille_stmt_ir.h
src/serac/emitter/ir/types/: binary_operation_type.h  func_param_ir.h  func_type.h  integer_type.cpp  integer_type.h  type.cpp  type.h  unary_operation_type.h
src/serac/lexer/: lexer.cpp  lexer.h  token.h  token_type.cpp  token_type.h
src/serac/parser/: parser.cpp  parser.h
src/serac/parser/ast/: ast_node.h  translation_ast.h
src/serac/parser/ast/common/: binary_operation.h  file_metadata.h  func_param.h  unary_operation.h
src/serac/parser/ast/exprs/: array_expr.h  array_subscription_expr.h  assignment_expr.h  binary_expr.h  boolean_expr.h  call_expr.h  cast_expr.h  complex_cast_expr.h  expr.h  identifier_expr.h  integer_expr.h  member_expr.h  postfix_expr.h  prefix_expr.h  unary_expr.h
src/serac/parser/ast/stmts/: assignment_stmt.h  break_stmt.h  breakall_stmt.h  call_stmt.h  compound_stmt.h  continue_stmt.h  control_flow_stmt.h  do_while_stmt.h  else_if_stmt.h  else_stmt.h  expr_stmt.h  for_stmt.h  func_decl_stmt.h  if_stmt.h  let_stmt.h  local_stmt.h  loop_stmt.h  package_stmt.h  return_stmt.h  scope_stmt.h  stmt.h  top_stmt.h  while_stmt.h
src/serac/shared/: error.h
src/serac/translator/: scope.h  translator.cpp  translator.h
src/serac/utils/: log_error.cpp  log_error.h  repeat_string.cpp  repeat_string.h
src/snakelangc/: CMakeLists.txt  main.cpp
src/snakelangc/compiler/: compile_options.h  compiler.cpp  compiler.h  emit_type.h
src/snakelangc/emitter/: emitter.cpp  emitter.exprs.cpp  emitter.funcs.cpp  emitter.globals.cpp  emitter.h  emitter.stmts.cpp  variable_ir.h
src/snakelangc/emitter/ir/: argument_expr_ir.h  assignment_stmt_ir.h  binary_expr_ir.h  binary_operation_type.h  boolean_expr_ir.h  call_expr_ir.h  call_stmt_ir.h  cast_expr_ir.h  downcast_expr_ir.h  expr_ir.h  func_decl_ir.h  func_param_ir.h  func_type.h  identifier_expr_ir.h  integer_expr_ir.h  package_ir.h  return_ir.h  scope_stmt_ir.h  type.cpp  type.h  variable_ir.h
src/snakelangc/emitter/ir/exprs/: arithmetic_expr_ir.h  binary_expr_ir.h  bitwise_expr_ir.h  boolean_expr_ir.h  expr_ir.h  identifier_expr_ir.h  integer_expr_ir.h  logical_expr_ir.h  relational_expr_ir.h  upcast_expr_ir.h
src/snakelangc/emitter/ir/stmts/: assignment_stmt_ir.h  break_stmt_ir.h  breakall_stmt_ir.h  call_stmt_ir.h  continue_stmt_ir.h  do_while_stmt_ir.h  else_if_stmt_ir.h  else_stmt_ir.h  if_stmt_ir.h  loop_stmt_ir.h  return_stmt_ir.h  stmt_ir.h  whille_stmt_ir.h
src/snakelangc/emitter/ir/types/: binary_operation_type.h  integer_type.cpp  integer_type.h  type.cpp  type.h
src/snakelangc/lexer/: lexer.cpp  lexer.h  token.h  token_type.h
src/snakelangc/parser/: parser.cpp  parser.h
src/snakelangc/parser/ast/: assignment_stmt.h  ast_node.h  binary_expr.h  binary_operation.h  call_expr.h  call_stmt.h  expr.h  func_decl_stmt.h  func_param.h  identifier_expr.h  integer_expr.h  let_stmt.h  package_stmt.h  return_stmt.h  scope_stmt.h  stmt.h  top_stmt.h  translation_ast.h
src/snakelangc/parser/ast/common/: binary_operation.h
src/snakelangc/parser/ast/exprs/: binary_expr.h  boolean_expr.h  call_expr.h  expr.h  identifier_expr.h  integer_expr.h
src/snakelangc/parser/ast/stmts/: assignment_stmt.h  break_stmt.h  breakall_stmt.h  call_stmt.h  compound_stmt.h  continue_stmt.h  control_flow_stmt.h  do_while_stmt.h  else_if_stmt.h  else_stmt.h  for_stmt.h  func_decl_stmt.h  if_stmt.h  let_stmt.h  local_stmt.h  loop_stmt.h  package_stmt.h  return_stmt.h  stmt.h  top_stmt.h  while_stmt.h
src/snakelangc/translator/: translator.cpp  translator.h
src/snakelangc/utils/: log_error.cpp  log_error.h
tests/: CMakeLists.txt
tests/sources/: basic_tokens.sn  main.sn  main.sr  test_package.ll
tests/translator/: do_while_tests.cpp  for_tests.cpp  if_tests.cpp  loop_tests.cpp  while_tests.cpp
tests/utils/: stringify.h  test_utils.cpp  test_utils.h
